--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@playwright/test": "^1.58.2",
     "@types/node": "^25.2.3",
     "allure-playwright": "^3.4.5"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "dotenv": "^17.3.1"
   }
 }
