--- a/.github/workflows/agentic-test.yml
+++ b/.github/workflows/agentic-test.yml
@@ -1,61 +1,50 @@
-name: Agentic Self-Healing CI
+name: Agentic Tests
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
-  agentic-resilience-check:
-    timeout-minutes: 15
+  agentic:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Test Repository
-      uses: actions/checkout@v4
+      - name: Checkout QE repo
+        uses: actions/checkout@v4
 
-    - name: Checkout Target Application
-      uses: actions/checkout@v4
-      with:
-        repository: bernardooduarte/fullstack-e2e-playwright-example
-        path: target-app
+      - name: Checkout target application
+        uses: actions/checkout@v4
+        with:
+          repository: bernardooduarte/fullstack-e2e-playwright-example
+          path: target-app
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
+      - name: Start application containers
+        working-directory: target-app
+        run: docker compose -f docker-compose.e2e.yml up -d --build
 
-    - name: Install Test Dependencies
-      run: npm ci
+      - name: Wait for backend
+        run: |
+          sleep 10
+          curl --retry 5 http://localhost:3001
 
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps chromium
+      - name: Install dependencies
+        working-directory: target-app
+        run: |
+          npm ci
+          npx playwright install --with-deps
 
-    - name: Start Target App (Docker)
-      working-directory: ./target-app
-      run: |
-        echo "🚀 Subindo containers..."
-        docker compose -f docker-compose.e2e.yml up -d --build
-        
-        echo "⏳ Aguardando Frontend estar pronto em localhost:3000..."
-        # Loop de espera (Wait-for-it) simples usando Curl
-        timeout 60s bash -c 'until curl -s http://localhost:3000 > /dev/null; do sleep 2; done'
-        
-        echo "✅ Aplicação está no ar!"
+      - name: Run agentic tests
+        working-directory: target-app
+        run: npx playwright test
 
-    - name: Run Self-Healing Tests
-      env:
-        GOOGLE_API_KEY: "mock_key_ci_fallback_mode"
-        BASE_URL: "http://localhost:3000"
-      run: npx playwright test tests/agentic-resilience.spec.ts
+      - name: Upload report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: agentic-report
+          path: target-app/playwright-report/
 
-    - name: Upload Playwright Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      - name: Stop containers
+        if: always()
+        working-directory: target-app
+        run: docker compose -f docker-compose.e2e.yml down
