--- a/.github/workflows/agentic-test.yml
+++ b/.github/workflows/agentic-test.yml
@@ -24,17 +24,29 @@ jobs:
 
       - name: Wait for backend
         run: |
-          sleep 10
-          curl --retry 5 http://localhost:3001
+          echo "Waiting for backend..."
+          for i in {1..10}; do
+            if curl -s http://localhost:3001; then
+              echo "Backend ready"
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "Backend failed to start"
+          exit 1
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
       - name: Install dependencies
-        working-directory: target-app
+        working-directory: target-app/e2e
         run: |
           npm ci
           npx playwright install --with-deps
 
       - name: Run agentic tests
-        working-directory: target-app
+        working-directory: target-app/e2e
         run: npx playwright test
 
       - name: Upload report
@@ -42,7 +54,7 @@ jobs:
         if: always()
         with:
           name: agentic-report
-          path: target-app/playwright-report/
+          path: target-app/e2e/playwright-report/
 
       - name: Stop containers
         if: always()
